hphp/test/zend/good/ext/standard/tests/strings/crypt_variation1.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!function_exists('crypt')) {
  die("SKIP crypt() is not available");
}
}
