hphp/test/zend/bad/ext/standard/tests/strings/crypt_sha512.php.skipif
<?php
if (!function_exists('crypt') || !defined("CRYPT_SHA512")) {
	die("SKIP crypt()-sha512 is not available");
}
?> 